--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -6,7 +6,7 @@
   min-width: 230px;
   padding-left: 10px;
   padding-right: 10px;
-  overflow-y: scroll;
+  overflow: scroll;
 }
 
 /* hide scrollbar for Chrome, Safari, Opera */
