--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,7 +5,7 @@
   bottom: 0;
   height: 65px;
   width: 97%;
-  background-color: rgb(61, 60, 60);
+  background-color: rgb(23, 23, 23);
   padding: 20px;
 }
 
@@ -25,6 +25,7 @@
   align-items: center;
   justify-content: space-between;
   max-width: 300px;
+  cursor: pointer;
 }
 
 .footer_right {
@@ -34,6 +35,7 @@
   justify-content: space-between;
   margin-right: 15px;
   color: var(--music-background-color);
+  cursor: pointer;
 }
 
 .footer_albumLogo {
