--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -24,7 +24,9 @@
   margin-right: auto;
   padding: 10px;
   object-fit: contain;
-  height: 125px;
+  height: 150px;
+  margin-top: -40px;
+  margin-bottom: -30px;
 }
 
 .playlists {
