--- a/src/components/Body/Body.css
+++ b/src/components/Body/Body.css
@@ -1,7 +1,8 @@
 .body {
   flex: 0.8;
   background: linear-gradient(rgb(91, 87, 115), rgba(0, 0, 0));
-
   color: white;
   padding: 30px;
+  height: 85vh;
+  overflow: scroll;
 }
