--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -28,3 +28,8 @@
 .header_right > h4 {
   margin-left: 10px;
 }
+
+.header_right:hover {
+  transition: transform 200ms ease-in-out;
+  transform: scale(1.08);
+}
