added the footer to be populated on the song that you choose, as well as the big play button to be a shuffle and choose a random song to populate the footer

--- a/src/components/Songs/Songs.css
+++ b/src/components/Songs/Songs.css
@@ -24,3 +24,9 @@
   transition: transform 100ms ease-in;
   transform: scale(1.08);
 }
+
+.songs > hr {
+  margin: 0px 20px;
+  margin-bottom: 5px;
+  border: 1px solid darkgray;
+}
