--- a/src/components/SongRow/SongRow.css
+++ b/src/components/SongRow/SongRow.css
@@ -10,12 +10,16 @@
 
 .song_row:hover {
   cursor: pointer;
-  background-color: var(--music-background-color);
+  background-color: rgb(0, 0, 0);
   opacity: 0.8;
   border-radius: 10px;
-  color: gray;
+  color: var(--music-background-color);
   transition: transform 200ms ease-in-out;
   transform: scale(1.08);
+}
+
+.choosen_song {
+  color: var(--music-color);
 }
 
 .song_rowInfo {
