added if no songs, footer says no song selected and the media buttons are grayed out

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -111,3 +111,11 @@
 .footer_right * .MuiSlider-root {
   color: var(--music-color) !important;
 }
+
+.none {
+  color: darkgray;
+}
+
+.no_song {
+  opacity: 50%;
+}
