fixed bug where you could hit next song when you were on last song showing

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -113,13 +113,14 @@
 }
 
 .none {
-  color: darkgray;
+  color: darkgray !important;
 }
 
 .no_song {
   opacity: 50%;
+  color: darkgray !important;
 }
 
-.no_song:hover {
+/* .no_song:hover {
   color: var(--music-background-color) !important;
-}
+} */
