--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -36,10 +36,6 @@
   margin: 0px 5px;
 }
 
-.last50 {
-  margin-right: 5px;
-}
-
 .last50:hover {
   color: var(--music-color) !important;
   cursor: pointer;
@@ -56,4 +52,9 @@
   cursor: pointer;
   transition: trasform 200ms ease-in-out;
   transform: scale(1.08);
+}
+
+.beginning {
+  opacity: 50%;
+  color: darkgray !important;
 }
