updated styling in banner for your music and updated logout to return intialState

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -25,7 +25,7 @@
 }
 
 .banner_small > small {
-  font-size: 14px;
+  font-size: 12px;
 }
 
 .banner_small > strong {
@@ -33,7 +33,7 @@
 }
 .arrow_icons {
   display: flex;
-  margin: 0px 5px;
+  margin-top: 5px;
 }
 
 .last50:hover {
