--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -36,11 +36,14 @@ input:focus {
   align-items: center;
   transition: transform 200ms;
 }
-
-.header_right > h4 {
-  margin-left: 10px;
+.avatar {
+  padding: 2px;
+  background-color: black;
+  border-radius: 30px;
 }
 
 .header_right:hover {
+  background-color: black;
+  border-radius: 30px;
   transform: scale(1.08);
 }
