able to now play songs for whichever song you click and footer controls work to play/pause, and previous and next. devices icon in footer now to see if there is any devices - if none, link to open user spotify profile to allow for music playback

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -38,6 +38,10 @@
   cursor: pointer;
 }
 
+.MuiGrid-container {
+  align-items: center;
+}
+
 .footer_albumLogo {
   object-fit: contain;
   height: 60px;
@@ -94,7 +98,7 @@
 }
 
 .footer_queue:hover {
-  color: var(--music-color);
+  color: var(--music-color) !important;
   transform: scale(1.25) !important;
 }
 
@@ -120,7 +124,3 @@
   opacity: 50%;
   color: darkgray !important;
 }
-
-/* .no_song:hover {
-  color: var(--music-background-color) !important;
-} */
