changed the play icon to be where the index is in songrow so that it shows the play and pause button instead of the index in playlist, and song duration now shows all the way to right

--- a/src/components/SongRow/SongRow.css
+++ b/src/components/SongRow/SongRow.css
@@ -58,10 +58,11 @@
 
 .play_icon {
   display: block;
-  margin-left: auto;
+  margin-right: 10px;
   color: var(--music-color) !important;
 }
 
 .song_duration {
-  display: flex;
+  display: block;
+  margin-left: auto;
 }
