updated footer opacity style as firebase deploy would change it to 1%, used 0.5 instead of 50% and fixed issue

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -163,17 +163,17 @@
 }
 
 .none {
-  color: darkgray !important;
+  color: gray !important;
 }
 
 .no_song {
-  opacity: 50%;
-  color: darkgray !important;
+  opacity: 0.5;
+  color: gray !important;
 }
 
 .no_volume {
-  opacity: 50%;
-  color: darkgray !important;
+  opacity: 0.5;
+  color: gray !important;
 }
 
 .no_volume:hover {
