added double feature for repeat button. if clicked once, will keep playing next song until last song in playlist, if clicked twice, will turn on song repeat. fixed bug in seek where you could seek with no song playing

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -119,7 +119,7 @@
 }
 
 .footer_shuffle:hover {
-  color: var(--music-color);
+  /* color: var(--music-color); */
   transform: scale(1.25) !important;
 }
 
@@ -139,7 +139,7 @@
 }
 
 .footer_repeat:hover {
-  color: var(--music-color);
+  /* color: var(--music-color); */
   transform: scale(1.25) !important;
 }
 
