fixed bug in footer when no song was selected, clicking next or previous would give value of null and crash app - npm run build

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -67,7 +67,13 @@
   display: none;
 }
 
-.footer_right * .MuiSlider-root {
+/* .footer_right * .MuiSlider-thumb {
+  border: 2px solid var(--music-color) !important ;
+  background-color: #fff;
+} */
+
+.PrivateValueLabel-open-2 {
+  color: rgb(40, 40, 40) !important;
 }
 
 .footer_right {
