updated handlePlayPause to initialstate to hold that function to be used in SongRow to allow playing and pausing from icon next to playing song

--- a/src/components/SongRow/SongRow.css
+++ b/src/components/SongRow/SongRow.css
@@ -73,3 +73,11 @@
   display: block;
   margin-left: auto;
 }
+
+.play_pause_icon {
+  transition: transform 200ms;
+}
+
+.play_pause_icon:hover {
+  transform: scale(1.1);
+}
