added shuffle button in footer functionality, changed app to load up your library instead of Discover Weekly

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -76,6 +76,10 @@
   color: rgb(40, 40, 40) !important;
 }
 
+.shuffle_on {
+  color: var(--music-color) !important;
+}
+
 .footer_right {
   flex: 0.3;
   display: flex;
