--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -5,11 +5,13 @@
 }
 
 .banner_text {
+  display: flex;
+  flex-direction: column;
   flex: 1;
 }
 
 .banner_text > h2 {
-  font-size: 48px;
+  font-size: 36px;
   margin-bottom: 10px;
 }
 
@@ -17,7 +19,10 @@
   font-size: 14px;
   margin-bottom: 5px;
 }
-
+.showing_offset {
+  font-size: 12px;
+  margin: 2px 0px;
+}
 .banner > img {
   height: 20vh;
   border-radius: 3px;
