updated header for using a scroll function to add effects and a 'header' for which playlist your in. updated css for background of song list

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body {
   --music-color: #ff6ec0;
   --music-background-color: #6eeeff;
+  background-color: black;
 }
 
 .body::-webkit-scrollbar {
