--- a/src/components/Songs/Songs.css
+++ b/src/components/Songs/Songs.css
@@ -1,5 +1,7 @@
 .songs {
-  margin: 20px -30px;
+  z-index: -1;
+  width: 100%;
+  margin-left: 5px;
 }
 
 .songs_icons {
@@ -36,8 +38,29 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  position: sticky;
+  top: 100px;
 }
 
+.sticky_table {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  position: sticky;
+  top: 100px;
+  background-color: rgb(50, 50, 50);
+  transition: background-color 200ms ease-in-out;
+  z-index: 100;
+  margin-left: -5px;
+  margin-right: -15px;
+}
+
+.sticky_table > .duration {
+  margin-right: 60px;
+}
+.sticky_table > .hash {
+  margin-left: 40px;
+}
 .hash {
   margin-left: 35px;
   margin-right: 45px;
