updated play function to have id of a connected device, updated the parentPosition for when the header and sticky table happen for better styling

--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -26,6 +26,7 @@
 
 .banner_img {
   height: 20vh;
+  max-height: 200px;
   border-radius: 3px;
   margin: 0 20px;
   box-shadow: 0 4px 60px rgba(0, 0, 0, 0.625);
