--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -84,8 +84,14 @@ input:focus {
 .header_right:hover {
   background-color: black;
   border-radius: 30px;
+  height: 50px;
   transform: scale(1.08);
 }
+
+/* .showHeader > .header_right:hover {
+  background-color: black;
+  border-radius: 30px;
+} */
 
 .showHeader > .header_right,
 .play_btn,
